--- a/luyentapFunction2/ex1.html
+++ b/luyentapFunction2/ex1.html
@@ -5,6 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-
+<script>
+    function square(num) {
+        let result = num * num;
+        return result
+    }
+    let number= +prompt('nhap so muon tinh binh phuong');
+    alert(square(number));
+</script>
 </body>
 </html>
